# deephyper

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  GNN_README.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.rst  kill.sh  model_weights.h5  paper.bib  paper.md  pyproject.toml  pytest.ini  readthedocs.yml  run_tests.sh  setup.cfg  setup.py  test.json  test_train.py  tox.ini
.conf/: travis-install-mpi.sh
.devcontainer/: Dockerfile  DockerfileDev  devcontainer.json
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-doc-request.yml  3-feature-request.yml  4-question.yml  bug_report.md  doc_request.md  question.md
.github/workflows/: checks-tests.yml  checks.yml  ci.yml  codeql.yml  coverage.yml  joss.yml  presubmit.yml  tests-core.yml  tests-macos.yml  tests-mpi.yml  tests-redis.yml  tests.yml
Deephyper.egg-info/: PKG-INFO
benchmarks/: keras_cmdline.py  util.py
benchmarks/b1/: addition_rnn.py  job.tmpl  problem.py  theta.tmpl
benchmarks/b2/: babi_memnn.py  evaluate.py  job.tmpl  problem.py
benchmarks/b3/: babi_rnn.py  job.tmpl  problem.py
benchmarks/candle/: README.md  README.setup.linux
benchmarks/candleNT3Nas/: load_data.py
benchmarks/candlep1b1/: exp_logger.py  p1b1_baseline_keras2.py  p1b1_param_set.R  pytorch_utils.py
benchmarks/capsule/: capsule.py  problem.py
benchmarks/cifar10Nas/: load_data.py  problem.py
benchmarks/cifar10_cnn_capsule/: cifar10_cnn_capsule.py  problem.py
benchmarks/cifar10cnn/: cifar10_cnn.py  cifar10cnn.py  doit.sh  load_data.py  problem.py
benchmarks/dummy1/: problem.py  three_hump_camel.py
benchmarks/dummy2/: problem.py  regression.py
benchmarks/gcn/: README  gcn.py  problem.py
benchmarks/mnistNas/: .load_data.py.swp  load_data.py  mnist_nas.py  problem.py
benchmarks/mnistcnn/: mnistcnn.py  problem.py
benchmarks/mnistmlp/: mnist_mlp.py  problem.py
benchmarks/ptbNas/: load_data.py  problem.py
benchmarks/rosen10/: rosenbrock10.py
benchmarks/rosen2/: problem.py
benchmarks/rosen30/: problem.py  rosenbrock30.py
benchmarks/wrf-ncep/: job.tmpl  problem.py  wrf-model.py
deephyper/: __init__.py  __version__.py
deephyper/analysis/: __init__.py  _matplotlib.py  _paxplot.py  _rank.py  hpo.py
deephyper/baseline/: __init__.py  base.py  classifier.py  regressor.py
deephyper/benchmark/: __init__.py  benchmark_functions.py  benchmark_functions_wrappers.py  problem.py  util.py
deephyper/benchmarks/: __init__.py  benchmark_functions.py  benchmark_functions_wrappers.py  keras_cmdline.py  problem.py  util.py
deephyper/contrib/: __init__.py  mpnn.py  preprocessing.py  quick_plot.py
deephyper/core/: model_utils.py  parser.py  utils.py  warnings.py
deephyper/doc/: INSTALL.md  RUN_THETA.md
deephyper/ensemble/: __init__.py  _bagging_ensemble.py  _base_ensemble.py  _ensemble.py  _uq_bagging_ensemble.py  _uq_bagging_ensemble_torch.py  _uq_ensemble.py  _uq_ensemble_tf_keras2.py  _uq_ensemble_torch.py  bagging_ensemble.py  base_ensemble.py  loss.py  uq_bagging_ensemble.py
deephyper/evaluator/: __init__.py  _balsam.py  _decorator.py  _distributed.py  _encoder.py  _evaluate.py  _evaluator.py  _job.py  _mochi_process_pool.py  _mpi.py  _mpiWorkerPool.py  _mpi_comm.py  _mpi_pool.py  _nest_asyncio.py  _processPool.py  _process_pool.py  _processpool.py  _queue.py  _queued.py  _ray.py  _ray_evaluator.py  _ray_horovod_evaluator.py  _run_function_utils.py  _serial.py  _subprocess.py  _threadPool.py  _thread_pool.py  _threadpool.py  async_evaluate.py  balsam_utils.py  callback.py  encoder.py  evaluate.py  job.py  mpi.py  ray_evaluator.py  runner.py
deephyper/evaluators/: .process_data.py.swp  __init__.py  _balsam.py  _local.py  _local_lite.py  _processPool.py  _subprocess.py  _threadPool.py  balsam.py  balsam_async.py  evaluate.py  evaluate_balsam.py  local.py  process_data.py  runner.py  test.py  test_functions.py  test_utils.py
deephyper/hpo/: __init__.py  _cbo.py  _eds.py  _mpi_dbo.py  _problem.py  _random.py  _regevo.py  _search.py
deephyper/layers/: __init__.py  _mpnn.py  _padding.py  padding.py
deephyper/model/: arch.py  nas.py
deephyper/multiobjective/: __init__.py  _multiobjective.py
deephyper/run/: nas.py  (+5 more)
doc/: INSTALL.md  Makefile  conf.py  index.rst
docs/: api.rst  authors.rst  conf.py  faq.rst  gen_api.sh  index.rst  requirements.txt  research.rst  sg_execution_times.rst  tests.rst
evaluators/: evaluate.py  evaluate_balsam.py  evaluate_local.py
examples/: README.rst  black_box_util.py  dbo_util.py  plot_from_serial_to_parallel_hpo.py  plot_from_serial_to_parallel_hyperparameter_search.py  plot_notify_failures_hyperparameter_search.py  plot_profile_worker_utilization.py  plot_scaling_bo.py  plot_transfer_learning_for_hpo.py  plot_transfer_learning_for_hps.py
install/: cooley.sh  environment.dev.macOS.arm64.yml  environment.macOS.arm64.gpu.yml  environment.macOS.arm64.yml  requirements.dev.macOS.arm64.txt  requirements.macOS.arm64.txt  theta.sh  thetagpu.sh
joss/: paper.bib  paper.md
logdir/: events.out.tfevents.1540494071.anlextwls003-198.wl.anl-external.org
model/: arch.py  nas.py  ptb_nas.py
savepoint/: model.data-00000-of-00001.REMOVED.git-id  model.index  model.meta.REMOVED.git-id
scripts/: README  dlhps.sh.test  job.tmpl  job_nas.tmpl  process_bench_timing.py  process_times.py  run_amlsRF.sh  run_amlsXGB.sh  run_ga.sh  run_hyperband.sh  run_rs.sh  runjob-async.sh  runjob.conf  runjob.conf.cooley  runjob.py  runjob.sh  runjob_nas.py
search/: .async-search.py.swp  .deephyper.log.swp  .evaluate.py.swp  .optimizer.py.swp  ExtremeGradientBoostingQuantileRegressor.py  amls.py  amls_distributed.py  async-search.py  balsam_run_nas.py  dummy_bench.py  evaluate.py  evaluate_balsam.py  evaluate_local.py  ga.py  hyperband.py  nas.py  optimizer.py  randomsearch.py  reset_nas_balsam.sh  run_nas.py  run_nas.sh  run_nas_balsam.sh  runjob.sh~  test_balsam_eval.py  test_local_eval.py  util.py  utils.py  worker.py
tests/: README.rst  conftest.py  dlhps.sh.test_ga  test_quickstart.py
(+2162 files in other folders)
