[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deephyper"
dynamic = ["version"]
description = "Scalable asynchronous neural architecture and hyperparameter search for deep neural networks"
authors = [
    {name = "Prasanna Balaprakash", email = "pbalapra@ornl.gov"},
    {name = "Romain Egele", email = "romainegele@gmail.com"},
    {name = "Misha Salim"},
    {name = "Romit Maulik"},
    {name = "Venkat Vishwanath"},
    {name = "Stefan Wild"}
]
maintainers = [{name = "Prasanna Balaprakash", email = "pbalapra@ornl.gov"}]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.scripts]
deephyper = "deephyper.core.cli._cli:main"

[project.urls]
Documentation = "http://deephyper.readthedocs.io"
Changes = "https://github.com/deephyper/deephyper/releases"
Forum = "https://github.com/deephyper/deephyper/discussions"
GitHub = "https://github.com/deephyper/deephyper"
Issues = "https://github.com/deephyper/deephyper/issues"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=deephyper/evaluator --ignore=tests/skopt"
norecursedirs = ".git _build docs"
filterwarnings = "ignore:The objective has been evaluated at this point before.:UserWarning"
markers = [
    "fast: marks to define a fast test",
    "slow: marks to define a slow test",
    "torch: marks to define a test that requires torch installed",
    "tf_keras2: marks to define a test that requires tf-keras~=2 installed",
    "ray: marks tests which needs Ray installed",
    "mpi: marks tests which needs mpi4py and MPI installed",
    "redis: marks tests which needs Redis installed",
    "jax: marks tests which needs JAX installed",
    "sdv: marks tests which needs SDV installed"
]
