[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deephyper"
dynamic = ["version"]
dependencies = [
    "ConfigSpace>=1.1.1",
    "cloudpickle",
    "dm-tree",
    "Jinja2>=3.1.4",
    "loky>=3.4",
    "matplotlib",
    "numpy>=1.26.0",
    "pandas>=0.24.2",
    "packaging",
    "parse",
    "scikit-learn>=0.23.1",
    "scipy>=1.10",
    "tqdm>=4.64.0",
    "psutil",
    "pymoo>=0.6.0",
    "pyyaml",
]
requires-python = ">=3.10"
authors = [
    { name = "Romain Egele", email = "regele@ornl.gov" },
    { name = "Prasanna Balaprakash", email = "pbalapra@ornl.gov" },
    { name = "Misha Salim" },
    { name = "Romit Maulik" },
    { name = "Venkat Vishwanath" },
    { name = "Stefan Wild" },
]
maintainers = [
    { name = "Romain Egele", email = "regele@ornl.gov" },
    { name = "Prasanna Balaprakash", email = "pbalapra@ornl.gov" },
    { name = "Gavin M. Wiggins" },
    { name = "Brett Eiffert ", email = "eiffertbc@ornl.gov" },
]
description = "Massively Parallel Hyperparameter Optimization for Machine Learning"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
jax-cpu = ["jax[cpu]>=0.3.25", "numpyro[cpu]"]
jax-cuda = ["jax[cuda]>=0.3.25", "numpyro[cuda]"]
torch = ["torch>=2.0.0"]
mpi = ["mpi4py>=3.1.3"]
ray = ["ray[default]>=1.3.0"]
redis = ["redis"]
redis-hiredis = ["redis[hiredis]"]
core = [
    "deephyper[torch]",
    "deephyper[jax-cpu]",
]
dev = [
    "build",
    "pytest",
    "twine",
    "ruff",
    "rstcheck",
    "GitPython",
    "ipython",
    "nbsphinx",
    "sphinx>=5",
    "sphinx-book-theme==1.1.3",
    "pydata-sphinx-theme==0.15.4",
    "sphinx-copybutton",
    "sphinx_design==0.6.1",
    "sphinx-gallery",
    "sphinx_lfs_content",
    "sphinx-togglebutton",
]

[project.scripts]
deephyper = "deephyper.core.cli._cli:main"

[project.urls]
Documentation = "http://deephyper.readthedocs.io"
Changes = "https://github.com/deephyper/deephyper/releases"
Forum = "https://github.com/deephyper/deephyper/discussions"
GitHub = "https://github.com/deephyper/deephyper"
Issues = "https://github.com/deephyper/deephyper/issues"

[tool.hatch.version]
path = "src/deephyper/__version__.py"

[tool.pytest.ini_options]
addopts = "--ignore=tests/skopt"
norecursedirs = ".git _build docs"
filterwarnings = "ignore:The objective has been evaluated at this point before.:UserWarning"
markers = [
    "slow: marks to define a slow test",
    "torch: marks to define a test that requires torch installed",
    "ray: marks tests which needs Ray installed",
    "mpi: marks tests which needs mpi4py and MPI installed",
    "redis: marks tests which needs Redis installed",
    "jax: marks tests which needs JAX installed",
    "memory_profiling: marks tests which needs profile memory using psutil installed",
]

[tool.coverage.paths]
source = ["src/", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["deephyper"]

[tool.coverage.report]
exclude_lines = ["if __name__ == '__main__':"]

[tool.ruff]
exclude = [
    "docs",
    "examples",
    "src/deephyper/skopt",
    "src/deephyper/analysis/hpo/_paxplot.py",
    "tests/skopt",
]
line-length = 100

[tool.ruff.lint]
extend-select = ["D", "E501"]
ignore = ["D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.uv.workspace]
members = ["deephyper"]
