[metadata]
name = deephyper
version = attr: deephyper.__version__
url = https://github.com/deephyper
project_urls =
    Documentation = http://deephyper.readthedocs.io
    Changes = https://github.com/deephyper/deephyper/releases
    Source Code = https://github.com/deephyper/deephyper
    Issue Tracker = https://github.com/deephyper/deephyper/issues
    Discussion = https://github.com/deephyper/deephyper/discussions
license = ANL
license_files = LICENSE.md
author =  Prasanna Balaprakash <pbalapra@anl.gov>, Romain Egele <romainegele@gmail.com>, Misha Salim <msalim@anl.gov>, Romit Maulik <rmaulik@anl.gov>, Venkat Vishwanath <venkat@anl.gov>, Stefan Wild <wild@anl.gov>
maintainer = Prasanna Balaprakash
maintainer_email = pbalapra@anl.gov
description = Scalable asynchronous neural architecture and hyperparameter search for deep neural networks.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = true
python_requires = >=3.7, <3.10

[options.packages.find]
exclude =
    docs
    install
    tests

[options.entry_points]
console_scripts =
    deephyper = deephyper.core.cli._cli:main
    deephyper-analytics = deephyper.core.analytics._analytics:main
