[metadata]
name = deephyper
version = attr: deephyper.__version__
url = https://github.com/deephyper
project_urls =
    Documentation = http://deephyper.readthedocs.io
    Changes = https://github.com/deephyper/deephyper/releases
    Source Code = https://github.com/deephyper/deephyper
    Issue Tracker = https://github.com/deephyper/deephyper/issues
    Discussion = https://github.com/deephyper/deephyper/discussions
license = BSD 3-clause
license_files = LICENSE.md
author =  Prasanna Balaprakash <pbalapra@ornl.gov>, Romain Egele <romainegele@gmail.com>, Misha Salim, Romit Maulik, Venkat Vishwanath, Stefan Wild
maintainer = Prasanna Balaprakash
maintainer_email = pbalapra@ornl.gov
description = Scalable asynchronous neural architecture and hyperparameter search for deep neural networks.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
include_package_data = true
python_requires = >=3.9

[options.packages.find]
exclude =
    docs
    install
    tests

[options.entry_points]
console_scripts =
    deephyper = deephyper.core.cli._cli:main
    deephyper-analytics = deephyper.core.analytics._analytics:main
